# hotwrapper

./: Procfile  README.md  app.json  deploy.txt  manage.py  pyproject.toml  requirements.txt
hotwrapper/: apps.py  manage.py  urls.py  views.py
hotwrapper/hotwrapper/: asgi.py  settings.py  urls.py  wsgi.py
hotwrapper/hotwrapperapi/: apps.py  views.py
hotwrapperapp/: settings.py  urls.py  wsgi.py
